syntax = "proto3";
package broker;

service Broker {
  rpc DroneCheckin(DroneCheckinRequest) returns (DroneCheckinResponse);
  rpc GetJobs(GetJobsRequest) returns (stream JobSpec);
  rpc RecordExecution(stream JobExecution) returns (Empty);
}

message DroneCheckinRequest {
  string drone_id = 1;
  string drone_ip = 2;
  string drone_region = 3;
  int64 drone_time_ms = 4;
}

message DroneCheckinResponse {
  int64 checkin_again_at = 1;
}

message GetJobsRequest {
  string region = 1;
}

message JobSpec {
  string job_id = 1;
  int64 lock_nonce = 2;
  int64 scheduled_at = 3;
  string method = 4;
  string url = 5;
  map<string, string> headers = 6;
  optional string body = 7;
  int32 timeout_ms = 8;
  int64 max_response_bytes = 9;
}

message JobExecution {
  string job_id = 1;
  bool success = 2;
  int64 lock_nonce = 3;
  optional Response response = 4;
  optional string response_error = 5;
  string req_method = 6;
  string req_url = 7;
  map<string, string> req_headers = 8;
  optional string req_body = 9;
  int64 executed_at = 10;
}

message Response {
  int64 status = 1;
  map<string, string> headers = 2;
  string body = 3;
}

message Empty {}
